
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct e1000_tx_ring {unsigned int count; unsigned long size; int last_tx_tso; scalar_t__ tdt; scalar_t__ tdh; scalar_t__ next_to_clean; scalar_t__ next_to_use; struct e1000_tx_buffer* desc; struct e1000_tx_buffer* buffer_info; } ;
struct e1000_tx_buffer {int dummy; } ;
struct e1000_hw {scalar_t__ hw_addr; } ;
struct e1000_adapter {int netdev; struct e1000_hw hw; } ;


 int e1000_unmap_and_free_tx_resource (struct e1000_adapter*,struct e1000_tx_buffer*) ;
 int memset (struct e1000_tx_buffer*,int ,unsigned long) ;
 int netdev_reset_queue (int ) ;
 int writel (int ,scalar_t__) ;

__attribute__((used)) static void e1000_clean_tx_ring(struct e1000_adapter *adapter,
    struct e1000_tx_ring *tx_ring)
{
 struct e1000_hw *hw = &adapter->hw;
 struct e1000_tx_buffer *buffer_info;
 unsigned long size;
 unsigned int i;



 for (i = 0; i < tx_ring->count; i++) {
  buffer_info = &tx_ring->buffer_info[i];
  e1000_unmap_and_free_tx_resource(adapter, buffer_info);
 }

 netdev_reset_queue(adapter->netdev);
 size = sizeof(struct e1000_tx_buffer) * tx_ring->count;
 memset(tx_ring->buffer_info, 0, size);



 memset(tx_ring->desc, 0, tx_ring->size);

 tx_ring->next_to_use = 0;
 tx_ring->next_to_clean = 0;
 tx_ring->last_tx_tso = 0;

 writel(0, hw->hw_addr + tx_ring->tdh);
 writel(0, hw->hw_addr + tx_ring->tdt);
}
